After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695081 - GDM Crashes on login screen if empty file /var/lib/gdm/run-initial-setup is present
GDM Crashes on login screen if empty file /var/lib/gdm/run-initial-setup is p...
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other Linux
: Normal blocker
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-03 21:12 UTC by Princeton Ferro
Modified: 2013-05-28 20:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
daemon: Don't run initial-setup if initial-setup is not installed (4.99 KB, patch)
2013-05-28 17:06 UTC, Ray Strode [halfline]
committed Details | Review

Description Princeton Ferro 2013-03-03 21:12:04 UTC
While tweaking around with a Fedora 19 Rawhide upgrade, I managed to break GDM 3.7.90 (it was working until I installed the gnome-initial-setup package) to the point where it would not start at all when my computer started (would either show a "Oh no!" message with a sad computer face, or simply wait a a blank screen with an "X" for the cursor).

After uninstalling gnome-initial-setup, the problem persisted.

What I found was, after a few hours worth of searching, that an empty file, /var/lib/gdm/run-initial-setup, was still present, and deleting that file caused GDM to work again.
Comment 1 Matthias Clasen 2013-03-12 12:19:06 UTC
On one level, this is a packaging bug: the gnome-initial-setup package should not leave that file behind. But gdm should be more robust here.
Comment 2 Matthias Clasen 2013-03-24 14:17:51 UTC
Ray, Jasper - are we reasonably sure that gnome-initial-setup will not produce systems where one can't log in ?
Comment 3 Matthias Clasen 2013-03-25 19:08:17 UTC
after talking to ray, that is the case.
Comment 4 Ray Strode [halfline] 2013-05-28 17:06:30 UTC
So one thing we don't handle, is we assuem gnome-initial-setup is always available.  When it isn't available and we need it, then we crash.

We should make it optional.
Comment 5 Ray Strode [halfline] 2013-05-28 17:06:45 UTC
Created attachment 245473 [details] [review]
daemon: Don't run initial-setup if initial-setup is not installed

Right now, we always assume gnome-initial-setup is installed and
there to use to create the initial user if necessary.

This isn't always true, and our failure mode is to crash.

This commit makes us more resiliant to a missing gnome-initial-setup.
Comment 6 Ray Strode [halfline] 2013-05-28 17:13:02 UTC
Review of attachment 245473 [details] [review]:

...

::: daemon/gdm-simple-slave.c
@@ +67,2 @@
 #define INITIAL_SETUP_USERNAME "gnome-initial-setup"
+#define GNOME_SESSION_SESSIONS_PATH DATADIR "/gnome-session/sessions"

I guess to be completely correct we would need to narf this function:

https://git.gnome.org/browse/gnome-session/tree/gnome-session/gsm-session-fill.c?id=3.8.2.1#n208

Not sure it's worth the code, though.
Comment 7 Ray Strode [halfline] 2013-05-28 20:11:54 UTC
I'm going to go ahead and push this, but if anyone has any comments on the patch I'm happy to address them in follow up commits.

This combined with the changes for bug 697292 means we can probably close this bug out.

Attachment 245473 [details] pushed as 52b43e5 - daemon: Don't run initial-setup if initial-setup is not installed