daemon: Don't run initial-setup if initial-setup is not installed

Right now, we always assume gnome-initial-setup is installed and
there to use to create the initial user if necessary.

This isn't always true, and our failure mode is to crash.

This commit makes us more resiliant to a missing gnome-initial-setup.

https://bugzilla.gnome.org/show_bug.cgi?id=695081